--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
 <body class="flex flex-col min-h-screen bg-gray-100">
     {% include 'parts/header.html.twig' %}
 
-    <main class="flex-grow container mx-auto px-6 py-8">
+    <main class="flex-grow container mx-auto px-10">
         {% block body %}{% endblock %}
     </main>
 
