--- a/templates/owner/restaurant/show.html.twig
+++ b/templates/owner/restaurant/show.html.twig
@@ -36,7 +36,10 @@
         <a href="{{ path('app_owner_restaurant_edit', {'id': restaurant.id}) }}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
             Modifier
         </a>
-        <a href="{{ path('app_owner_room_index', {'restaurant_id': restaurant.id}) }}" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+        <a href="{{ path('app_owner_menu_index', {'restaurant_id': restaurant.id}) }}" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+            Gérer les menus
+        </a>
+        <a href="{{ path('app_owner_room_index', {'restaurant_id': restaurant.id}) }}" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
             Gérer les salles
         </a>
         <a href="{{ path('app_owner_restaurant_index') }}" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded">
