--- a/templates/parts/footer.html.twig
+++ b/templates/parts/footer.html.twig
@@ -7,7 +7,7 @@
                 <p>Téléphone: +33 6 44 16 98 01</p>
             </div>
             <div class="w-full md:w-1/3 mb-6 md:mb-0">
-                <h3 class="text-lg font-semibold mb-2">Follow Us</h3>
+                <h3 class="text-lg font-semibold mb-2">Suivez-nous !</h3>
                 <div class="flex space-x-4">
                     <a href="#" class="hover:text-blue-400">Facebook</a>
                     <a href="#" class="hover:text-blue-400">Twitter</a>
