--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -16,7 +16,7 @@
                 </p>
                 <div class="mt-12 sm:flex sm:justify-center lg:justify-start flex flex-col w-full gap-10 items-center">
                     <div class="rounded-md shadow sm:w-auto">
-                        <form action="{{ path('app_search') }}" method="GET" class="flex">
+                        <form action="{{ path('restaurant_search') }}" method="GET" class="flex">
                             <input type="text" name="query" placeholder="Nom du restaurant" class="px-5 py-3 border-transparent text-base font-medium rounded-l-md text-gray-900 bg-white w-80 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent" required>
                             <button type="submit" class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-r-md text-white bg-blue-800 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                                 Rechercher
@@ -106,7 +106,7 @@
                             <p>Réservez une table dans vos restaurants préférés en quelques clics.</p>
                         </div>
                         <div class="mt-5">
-                            <a href="{{ path('app_search') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                            <a href="{{ path('restaurant_search') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                                 Rechercher un restaurant
                             </a>
                         </div>
