--- a/templates/parts/header.html.twig
+++ b/templates/parts/header.html.twig
@@ -6,7 +6,7 @@
                 <a href="{{ path('app_home') }}" class="text-xl font-bold text-gray-800">Réserver votre restaurant sur Restouf'</a>
             </div>
             <div class="flex items-center">
-                <form action="{{ path('app_search') }}" method="GET" class="mr-4">
+                <form action="{{ path('restaurant_search') }}" method="GET" class="mr-4">
                     <input type="text" name="q" placeholder="Search restaurants" class="px-4 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </form>
                 {% if app.user %}
